# DiscordAutoJoin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
DiscordAutoJoin/: __init__.py  actions.py  automation.py  browser.py  build.bat  chrome_flags.py  config.py  lock.py  logging_setup.py  main.py  resource_guard.py  state.py  test_playwright.py  tray.py
plans/: roadmap.md
scripts/: build.bat  smoke_test.ps1
src/DiscordAutoJoin/: __init__.py  actions.py  automation.py  browser.py  chrome_flags.py  config.py  lock.py  logging_setup.py  main.py  resource_guard.py  state.py  tray.py
tests/: __init__.py  conftest.py  test_actions.py  test_browser.py  test_config.py  test_integration.py  test_lock.py  test_logging_setup.py  test_resource_guard.py  test_state.py  test_tray.py
