[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiscordAutoJoin"
version = "1.0.0"
description = "Automated Discord voice channel joiner with system tray integration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "DiscordAutoJoin Contributors"}
]
keywords = ["discord", "automation", "voice", "tray", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0,<2.0",
    "pystray>=0.19.0,<1.0",
    "pillow>=10.0.0,<12.0",
    "psutil>=5.9.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0,<8.0",
    "pytest-timeout>=2.2,<3.0",
]

[project.scripts]
discord-autojoin = "DiscordAutoJoin.main:main"
discord-autojoin-debug = "DiscordAutoJoin.main:main_debug"

[project.urls]
Homepage = "https://github.com/DreamHAX444/DiscordAutoJoin"
Repository = "https://github.com/DreamHAX444/DiscordAutoJoin"
Issues = "https://github.com/DreamHAX444/DiscordAutoJoin/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["DiscordAutoJoin*"]
exclude = ["DiscordAutoJoin.venv*", "DiscordAutoJoin.cache*", "DiscordAutoJoin.crash_dumps*", "DiscordAutoJoin.logs*"]

[tool.setuptools.package-data]
"DiscordAutoJoin" = ["*.py"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/DiscordAutoJoin",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (requires real browser)",
    "unit: marks tests as unit tests",
]
timeout = 30
asyncio_mode = "auto"

[tool.coverage.run]
source = ["DiscordAutoJoin"]
omit = [
    "DiscordAutoJoin/main.py",       # entry point, tested via integration
    "DiscordAutoJoin/__init__.py",   # re-exports only
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
show_error_codes = true
exclude = [
    "DiscordAutoJoin/venv/",
    "DiscordAutoJoin/cache/",
    "DiscordAutoJoin/crash_dumps/",
    "DiscordAutoJoin/logs/",
    "tests/",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "pystray.*",
    "PIL.*",
    "psutil.*",
]
ignore_missing_imports = true